<resources>
    <string name="app_name">FirstApp_LV</string>
    <string name="hallo_text">Hallo World!</string>
    <string name="group_name">This is the first application from Group "G-02-24"</string>
    <string name="MB">Marts Bičevskis</string>
    <string name="DEL">Dens Enrijs Lakučs</string>
    <string name="LV">Loreta Vītiņa</string>
    <string name="designed_by">This application was developed by Loreta Vītiņa</string>
</resources>